# APIBuilder

./: .gitignore  APIBuilder.code-workspace  CMakeLists.txt  README.md  build.bat  envVars.bat
includes/: core.h  mydll.cpp  mydll.h  nolib.cpp  nolib.h
libs/: API.lib  API2.lib  APIBuilder.lib  DLL1.lib
src/: main.cpp  maya_deformer.cpp
